# chess

./: .dockerignore  .gitignore  Dockerfile  README.md  azure-pipelines.yml  chess_board_1.py  chess_game_adapter.py  client.py  conftest.py  db_connector.py  docker-compose.yml  eval_board.py  game_state.py  gui.py  healthcheck.py  hsm.py  logging_config.py  login_window.py  main.py  mcts.py  optional_dependencies.py  performance_monitoring.py  pgn_to_db.py  pieces.py  postgres.py  postgres_auth.py  pyproject.toml  requirements.txt  sentry_config.py  sonar-project.properties  test_chess_board_1.py  test_client.py  test_db_connector.py  test_eval_board.py  test_gui.py  test_hsm.py  test_main.py  test_mcts.py  test_network_client.py  test_network_gui.py  (+7 more)
.github/workflows/: azure-webapps_chess.yml  main_appori2n7.yml  python-app.yml
.sonarlint/: connectedMode.json
online/: network_client.py  network_gui.py  network_server.py  networked_chess_board.py
openings/: all.tsv
terraform/: main.tf
