[project]
name = "chess-game"
version = "0.1.0"
description = "A chess game with AI capabilities"
requires-python = ">=3.11"
dependencies = [
    "chess>=1.10.0",
    "mysql-connector-python>=9.1.0",
    "numpy>=1.26.4",
    "pandas>=2.2.2",
    "passlib>=1.7.4",
    "PyQt5>=5.15.10",
    "PyQt5-Qt5>=5.15.2",
    "PyQt5-sip>=12.13.0",
    "pytest>=8.2.1",
    "tornado>=6.4.1",
    "pycryptodome>=3.21.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.0.1",
    "fastapi",
    "uvicorn",
    "gunicorn",
    "websockets",
    "requests",
]

[project.optional-dependencies]
monitoring = [
    "sentry-sdk>=1.40.0",
]
dev = [
    "ruff>=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py311" 